--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,6 @@ a {
 }
 
 .top {
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     background: #2e2f42;
 }
 
@@ -80,9 +79,18 @@ a {
 }
 
 .top-button {
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background: #4d5ae5;
     cursor: pointer;
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        color: #fff;
+}
+
+.top-button:hover,
+.top-button:focus {
+background-color: #404BBF
 }
 
 .button-link {
@@ -145,6 +153,7 @@ a {
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
+    text-transform: capitalize
 }
 
 .portfolio-name {
@@ -167,4 +176,8 @@ a {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
+}
+
+.team-menu {
+    background-color: #FFFFFF
 }
