--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,7 @@ background-color: #404BBF
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    text-transform: capitalize
+    text-transform: capitalize;
 }
 
 .portfolio-name {
