--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,7 @@ background-color: #404BBF
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
+    text-transform: capitalize;
     text-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 
