--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,10 @@ a {
     color: #f4f4fd;
 }
 
+.header-logo {
+    margin-right: 76px;
+}
+
 .nav-link {
     font-weight: 500;
     font-size: 16px;
@@ -98,7 +102,7 @@ a {
     text-align: center;
     color: #fff;
     text-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-    width: 496px;
+    max-width: 496px;
     margin-bottom: 22px;
     text-align: center;
 }
@@ -111,7 +115,11 @@ a {
         line-height: 1.5;
         letter-spacing: 0.04em;
         color: #fff;
-        display: flex;
+        display: block;
+        min-width: 169px;
+        height: 56px;
+        border: none;
+        border-radius: 4px;
         padding: 16px 32px;
         margin: auto;
         align-items: center;
@@ -138,7 +146,8 @@ background-color: #404BBF
     letter-spacing: 0.02em;
     color: #2e2f42;
     display: block;
-        width: 264px;
+    width: 264px;
+    margin-bottom: 8px;
 }
 
 .benefits-text{
@@ -163,8 +172,7 @@ background-color: #404BBF
     color: #2e2f42;
     text-transform: capitalize;
     text-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-    padding-top: 120px;
-    padding-bottom: 72px;
+    margin-bottom: 72px;
 }
 
 .team-name {
@@ -174,8 +182,6 @@ background-color: #404BBF
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    padding-top: 32px;
-    padding-bottom: 8px;
 }
 
 .team-discription {
@@ -204,7 +210,7 @@ background-color: #404BBF
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    margin: 32px 226px 8px 16px;
+    margin-bottom: 8px
     
 
 }
@@ -214,7 +220,7 @@ background-color: #404BBF
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    margin: 0 314px 32px 16px;
+
 }
 
 .footer-text {
@@ -223,7 +229,6 @@ background-color: #404BBF
     letter-spacing: 0.02em;
     color: #f4f4fd;
     display: block;
-    margin: 0 1020px 100px 156px;
     width: 264px;
 
 }
@@ -232,7 +237,12 @@ background-color: #404BBF
     background-color: #FFFFFF;
     display: block;
     margin-bottom: 120px;
+    align-items: center;
     
+}
+
+.team-menu img {
+    object-fit: fill;
 }
 
 .container {
@@ -245,8 +255,9 @@ background-color: #404BBF
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    margin: 24px 156px;
     width: 1440px;
+    margin: 0 auto;
+    border-bottom: 1px solid #e7e9fc;
 }
 
 .header-nav {
@@ -259,6 +270,7 @@ background-color: #404BBF
     display: flex;
     gap: 40px;
     margin-left: 76px;
+    padding: 24px 0;
 }
 
 .contacts-list {
@@ -277,6 +289,7 @@ background-color: #404BBF
     display: block;
     align-items: center;
     margin: 120px 156px;
+    padding: 120px 0;
 }
 
 .benefits-list {
@@ -293,8 +306,6 @@ background-color: #404BBF
 .team-container {
     display: block;
     align-items: center;
-    width: 1440px;
-    height: 732px;
 }
 
 .team-list {
@@ -305,9 +316,6 @@ background-color: #404BBF
         align-items: center;
 }
 
-.team-list .team-menu {
-    width: calc((100%-72px)/4);
-}
 
 .team-menu {
     display: block;
@@ -315,50 +323,75 @@ background-color: #404BBF
     width: 264px;
     height: 380px;
     background: #f4f4fd;
-    border: 1px solid #000000;
+
+    border-radius: 0px 0px 4px 4px;
 }
 
 .portfolio-container {
     display: block;
     align-items: center;
     width: 1140px;
-   
+    padding-bottom: 120px;
     padding-top: 120px;
 }
 
-.portfolio-first {
-    display: flex;
-    gap: 24px;
-    margin-bottom: 48px;
-    width: calc((100%-48px)/3);
-    
-
-}
-
-.portfolio-second {
-    display: flex;
-    gap: 24px;
-    width: 1140px;
-    width: calc((100%-48px)/3);
-
-}
-
 .portfolio-set {
-    border-right: 1px solid #9aceeb;
-    border-bottom: 1px solid #9aceeb;
-    border-left: 1px solid #9aceeb;
+    width: calc((100% - 48px) / 3);
+}
 
+.portfolio-set img {
+    width: 100%;
+    height: 100%;
+}
+
+.footer-container {
+    padding: 100px 0;
 }
 
 .page-footer .footer-container {
     align-items: center;
     justify-content: space-between;
     width: 1440px;
-    height: 312px;
-}
+        height: 312px;
+        padding: 100px 0;
+    }
 
 .footer-logo {
-    display: block;
-    padding: 100px 1169px 16px 156px;
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
+.visually-hidden {
+    display: none;
+}
+
+.team-part {
+    display: block;
+    padding: 32px 0;
+    border-right: 1px solid #000000;
+    border-left: 1px solid #000000;
+    border-bottom: 1px solid #000000;
+    border-radius: 0px 0px 4px 4px;
+}
+
+.team-part .team-name {
+    text-align: center;
+    margin-bottom: 8px
+}
+
+.team-part .team-discription{
+    text-align: center;
+}
+
+.portfolio-menu {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+
+.portfolio-text {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
