--- a/css/styles.css
+++ b/css/styles.css
@@ -236,7 +236,6 @@ background-color: #404BBF
 .team-menu {
     background-color: #FFFFFF;
     display: block;
-    margin-bottom: 120px;
     align-items: center;
     
 }
@@ -306,6 +305,7 @@ background-color: #404BBF
 .team-container {
     display: block;
     align-items: center;
+    padding: 120px 0;
 }
 
 .team-list {
@@ -330,9 +330,9 @@ background-color: #404BBF
 .portfolio-container {
     display: block;
     align-items: center;
-    width: 1140px;
-    padding-bottom: 120px;
-    padding-top: 120px;
+
+            padding-bottom: 120px;
+            padding-top: 120px;
 }
 
 .portfolio-set {
@@ -340,8 +340,9 @@ background-color: #404BBF
 }
 
 .portfolio-set img {
-    width: 100%;
-    height: 100%;
+    width: 360px;
+    height: 300px;
+    object-fit: contain;
 }
 
 .footer-container {
@@ -351,9 +352,7 @@ background-color: #404BBF
 .page-footer .footer-container {
     align-items: center;
     justify-content: space-between;
-    width: 1440px;
-        height: 312px;
-        padding: 100px 0;
+    padding: 100px 0;
     }
 
 .footer-logo {
@@ -388,6 +387,7 @@ background-color: #404BBF
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
+  
 }
 
 .portfolio-text {
@@ -395,3 +395,4 @@ background-color: #404BBF
     border: 1px solid #e7e9fc;
     border-top: none;
 }
+
