--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,10 @@ body {
     background-color: #fff;
 }
 
+img {
+    display: block;
+}
+
 ul, ol{
     list-style-type: none;
     margin-top: 0;
