--- a/css/styles.css
+++ b/css/styles.css
@@ -90,12 +90,12 @@ a {
 
 .page-footer {
     background: #2e2f42;
-    margin-top: 224px;
+    padding: 100px 0;
 }
 
 .top {
     background: #2e2f42;
-
+    padding: 188px 0;
 }
 
 .top-title {
@@ -108,7 +108,7 @@ a {
     text-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     max-width: 496px;
     margin-bottom: 22px;
-    text-align: center;
+
 }
 
 .top-button {
@@ -260,7 +260,6 @@ background-color: #404BBF
     justify-content: flex-start;
     width: 1440px;
     margin: 0 auto;
-    border-bottom: 1px solid #e7e9fc;
 }
 
 .header-nav {
@@ -273,7 +272,6 @@ background-color: #404BBF
     display: flex;
     gap: 40px;
     margin-left: 76px;
-    padding: 24px 0;
 }
 
 .contacts-list {
@@ -285,14 +283,13 @@ background-color: #404BBF
 .top-container {
     display: block;
     box-sizing: content-box;
-    padding: 214px 471px 188px 473px;
+    padding: 26px 472px;
+
 }
 
 .benefits-container {
     display: block;
     align-items: center;
-    margin: 120px 156px;
-    padding: 120px 0;
 }
 
 .benefits-list {
@@ -309,7 +306,6 @@ background-color: #404BBF
 .team-container {
     display: block;
     align-items: center;
-    padding: 120px 0;
 }
 
 .team-list {
@@ -327,16 +323,13 @@ background-color: #404BBF
     width: 264px;
     height: 380px;
     background: #f4f4fd;
-
+    width: calc((100%-72px)/4);
     border-radius: 0px 0px 4px 4px;
 }
 
 .portfolio-container {
     display: block;
     align-items: center;
-
-            padding-bottom: 120px;
-            padding-top: 120px;
 }
 
 .portfolio-set {
@@ -350,13 +343,11 @@ background-color: #404BBF
 }
 
 .footer-container {
-    padding: 100px 0;
 }
 
 .page-footer .footer-container {
     align-items: center;
     justify-content: space-between;
-    padding: 100px 0;
     }
 
 .footer-logo {
@@ -365,7 +356,13 @@ background-color: #404BBF
 }
 
 .visually-hidden {
-    display: none;
+    clip: rect(0 0 0 0);
+    clip-path: inset(100%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
 }
 
 .team-part {
@@ -400,3 +397,22 @@ background-color: #404BBF
     border-top: none;
 }
 
+.page-header {
+    border-bottom: 1px solid #e7e9fc;
+}
+.nav-item {
+    padding: 24px 0;
+}
+
+.benefits {
+    padding: 120px 0;
+}
+
+.team{
+    padding: 120px 0;
+}
+
+.portfolio {
+    padding-bottom: 120px;
+    padding-top: 120px;
+}
