--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,7 @@ a {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    padding: 24px 0;
 }
 
 .contacts{
@@ -272,6 +273,7 @@ background-color: #404BBF
     display: flex;
     gap: 40px;
     margin-left: 76px;
+    padding: 24px 0;
 }
 
 .contacts-list {
@@ -356,13 +358,16 @@ background-color: #404BBF
 }
 
 .visually-hidden {
-    clip: rect(0 0 0 0);
-    clip-path: inset(100%);
-    height: 1px;
-    overflow: hidden;
     position: absolute;
-    white-space: nowrap;
     width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    overflow: hidden;
 }
 
 .team-part {
@@ -400,9 +405,7 @@ background-color: #404BBF
 .page-header {
     border-bottom: 1px solid #e7e9fc;
 }
-.nav-item {
-    padding: 24px 0;
-}
+
 
 .benefits {
     padding: 120px 0;
