--- a/css/styles.css
+++ b/css/styles.css
@@ -69,10 +69,12 @@ a {
     letter-spacing: 0.02em;
     color: #2e2f42;
     padding: 24px 0;
+    display: block;
 }
 
 .contacts{
     font-style: normal;
+    margin-left: auto;
 }
 
 .contacts-link {
@@ -80,6 +82,8 @@ a {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    display: block;
+    padding: 24px 0;
 }
 
 .nav-link:hover,
@@ -106,9 +110,10 @@ a {
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
-    text-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     max-width: 496px;
-    margin-bottom: 22px;
+    margin-bottom: 48px;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 
@@ -161,7 +166,6 @@ background-color: #404BBF
     letter-spacing: 0.02em;
     color: #434455;
     display: block;
-    margin-top: 8px;
 }
 
 .team{
@@ -233,8 +237,7 @@ background-color: #404BBF
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
-    display: block;
-    width: 264px;
+    max-width: 264px;
 
 }
 
@@ -259,8 +262,6 @@ background-color: #404BBF
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    width: 1440px;
-    margin: 0 auto;
 }
 
 .header-nav {
@@ -272,37 +273,28 @@ background-color: #404BBF
 .nav-list {
     display: flex;
     gap: 40px;
-    margin-left: 76px;
-    padding: 24px 0;
 }
 
 .contacts-list {
     display: flex;
     gap: 40px;
-    margin-left: 332px;
 }
 
 .top-container {
-    display: block;
-    box-sizing: content-box;
-    padding: 26px 472px;
-
+ 
 }
 
 .benefits-container {
-    display: block;
-    align-items: center;
+
 }
 
 .benefits-list {
     display: flex;
     gap: 24px;
-    align-content: center;
-    margin: 0 auto;
 }
 
 .benefits-list .benefits-tipe {
-    width: calc((100%-72px)/4);
+    width: calc((100% - 72px)/4);
 }
 
 .team-container {
@@ -313,19 +305,14 @@ background-color: #404BBF
 .team-list {
     display: flex;
         gap: 24px;
-        align-content: center;
-        margin: 0 auto;
         align-items: center;
 }
 
 
 .team-menu {
-    display: block;
-    align-items: center;
-    width: 264px;
-    height: 380px;
-    background: #f4f4fd;
-    width: calc((100%-72px)/4);
+
+    background: #ffffff;
+    width: calc((100% - 72px)/4);
     border-radius: 0px 0px 4px 4px;
 }
 
@@ -371,12 +358,7 @@ background-color: #404BBF
 }
 
 .team-part {
-    display: block;
     padding: 32px 0;
-    border-right: 1px solid #000000;
-    border-left: 1px solid #000000;
-    border-bottom: 1px solid #000000;
-    border-radius: 0px 0px 4px 4px;
 }
 
 .team-part .team-name {
