--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,21 @@ a {
     color: #2e2f42;
     padding: 24px 0;
     display: block;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav-item {
+    position: relative;
+}
+.nav-item:active::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    border-radius: 2px;
+    width: 100%;
+    height: 4px;
+    background: #404bbf;
 }
 
 .contacts{
@@ -84,6 +99,8 @@ a {
     color: #434455;
     display: block;
     padding: 24px 0;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:hover,
@@ -94,13 +111,23 @@ a {
 }
 
 .page-footer {
+    display: flex;
     background: #2e2f42;
     padding: 100px 0;
+    flex-direction: row;
+    justify-content: flex-start;
 }
 
 .top {
-    background: #2e2f42;
     padding: 188px 0;
+    background-image: linear-gradient(
+            rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)
+    ),
+            url("../images/people-office.jpg");
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: cover;
 }
 
 .top-title {
@@ -134,6 +161,8 @@ a {
         margin: auto;
         align-items: center;
         justify-items: center;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -262,6 +291,8 @@ background-color: #404BBF
     display: flex;
     align-items: center;
     justify-content: flex-start;
+
+
 }
 
 .header-nav {
@@ -281,6 +312,7 @@ background-color: #404BBF
 }
 
 .top-container {
+
  
 }
 
@@ -314,6 +346,7 @@ background-color: #404BBF
     background: #ffffff;
     width: calc((100% - 72px)/4);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-container {
@@ -323,13 +356,22 @@ background-color: #404BBF
 
 .portfolio-set {
     width: calc((100% - 48px) / 3);
+    transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-set img {
     width: 360px;
     height: 300px;
     object-fit: contain;
+    position: relative;
+        overflow: hidden;
 }
+
+.portfolio-set:hover {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
 
 .footer-container {
 }
@@ -337,6 +379,7 @@ background-color: #404BBF
 .page-footer .footer-container {
     align-items: center;
     justify-content: space-between;
+    margin-left: 100px;
     }
 
 .footer-logo {
@@ -368,6 +411,8 @@ background-color: #404BBF
 
 .team-part .team-discription{
     text-align: center;
+    margin-bottom: 8px;
+
 }
 
 .portfolio-menu {
@@ -386,6 +431,8 @@ background-color: #404BBF
 
 .page-header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+    
 }
 
 
@@ -400,4 +447,110 @@ background-color: #404BBF
 .portfolio {
     padding-bottom: 120px;
     padding-top: 120px;
+}
+
+.social {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+
+}
+
+
+.social-link {
+    display: flex;
+    align-items: center;
+        justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #4D5AE5;
+    border-radius: 50%;
+  
+}
+
+.social-link:hover,
+.social-link:focus {
+    background-color: #404BBF
+}
+
+.team-socicon {
+width: 40px;
+height: 40px;
+
+}
+
+.soc-icon {
+}
+
+.benefits-icon {
+    border: 1px solid #8e8f99;
+        border-radius: 4px;
+        width: 264px;
+        height: 112px;
+        background: #f4f4fd;
+        display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 8px;
+}
+
+.footer-socials {
+    margin-left: 120px;
+
+}
+
+.footer-sm {
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #fff;
+        margin-bottom: 16px;
+}
+
+.footer-social {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+
+
+}
+
+.overlay {
+    padding: 8px;
+    background-color: #3f51b5;
+    color: #fff;
+    font-family: sans-serif;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms ease-in-out;
+}
+
+.portfolio-img {
+    position: relative;
+overflow: hidden;
+}
+
+.portfolio-img:hover .overlay {
+    transform: translateY(0);
+}
+
+.portfolio-imgtext {
+    display: block;
+    font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #f4f4fd;
+        margin: 40px auto;
+        align-items: center;
+        
 }
