--- a/css/styles.css
+++ b/css/styles.css
@@ -70,13 +70,13 @@ a {
     color: #2e2f42;
     padding: 24px 0;
     display: block;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    position: relative;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-item {
     position: relative;
 }
-.nav-item:active::after {
+.nav-link:active::after {
     content: "";
     position: absolute;
     left: 0;
@@ -84,7 +84,7 @@ a {
     border-radius: 2px;
     width: 100%;
     height: 4px;
-    background: #404bbf;
+    background-color: #404bbf;
 }
 
 .contacts{
@@ -99,8 +99,7 @@ a {
     color: #434455;
     display: block;
     padding: 24px 0;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:hover,
@@ -119,6 +118,7 @@ a {
 }
 
 .top {
+    
     padding: 188px 0;
     background-image: linear-gradient(
             rgba(46, 47, 66, 0.7),
@@ -161,9 +161,7 @@ a {
         margin: auto;
         align-items: center;
         justify-items: center;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .top-button:hover,
@@ -312,7 +310,7 @@ background-color: #404BBF
 }
 
 .top-container {
-
+max-width: 1440px;
  
 }
 
@@ -356,8 +354,7 @@ background-color: #404BBF
 
 .portfolio-set {
     width: calc((100% - 48px) / 3);
-    transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-set img {
@@ -374,6 +371,8 @@ background-color: #404BBF
 
 
 .footer-container {
+    display: flex;
+    align-items: baseline;
 }
 
 .page-footer .footer-container {
@@ -478,10 +477,12 @@ background-color: #404BBF
 .team-socicon {
 width: 40px;
 height: 40px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
 .soc-icon {
+
 }
 
 .benefits-icon {
@@ -496,42 +497,38 @@ height: 40px;
             margin-bottom: 8px;
 }
 
-.footer-socials {
-    margin-left: 120px;
 
-}
 
 .footer-sm {
     font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
-        color: #fff;
+        color: #FFFFFF;
         margin-bottom: 16px;
 }
 
 .footer-social {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
     gap: 16px;
 
 
 }
 
 .overlay {
-    padding: 8px;
-    background-color: #3f51b5;
-    color: #fff;
-    font-family: sans-serif;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform: translateY(100%);
-    transition: transform 250ms ease-in-out;
+        top: 0;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #f4f4fd;
+        padding: 40px 32px;
+        background-color: #4d5ae5;
+        height: 100%;
+        width: 100%;
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-img {
@@ -539,18 +536,33 @@ height: 40px;
 overflow: hidden;
 }
 
-.portfolio-img:hover .overlay {
-    transform: translateY(0);
+.portfolio-img:hover .overlay{
+    transform: translateY(0%);
 }
 
-.portfolio-imgtext {
-    display: block;
-    font-weight: 400;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #f4f4fd;
-        margin: 40px auto;
+.footer-first {
+    margin-right: 120px;
+}
+
+.footer-social-link { 
+    width: 100%;
+    height: 100%; 
+    background-color: #4d5ae5;
+        border-radius: 50%;
+        display: flex;
         align-items: center;
-        
+        justify-content: center;
+    width: 40px;
+    height: 40px;
+
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+    background-color: #31d0aa;
+}
+
+.footer-team-socicon {
+    width: 40px;
+        height: 40px;
 }
