--- a/css/styles.css
+++ b/css/styles.css
@@ -574,3 +574,7 @@ overflow: hidden;
         height: 40px;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.soc-icon {
+    fill: #f4f4fd;
+}
