--- a/css/styles.css
+++ b/css/styles.css
@@ -67,17 +67,22 @@ a {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #404bbf;
+    color: #434455;
     padding: 24px 0;
     display: block;
     position: relative;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.nav-link.current {
+    position: relative;
+    color: #404bbf;
+}
+
 .nav-item {
     position: relative;
     
 }
-.nav-link::after {
+.nav-link.current::after {
     content: "";
     position: absolute;
     left: 0;
@@ -131,6 +136,7 @@ a {
     background-position: 50% 50%;
     background-size: cover;
     max-width: 1440px;
+    margin: auto;
 }
 
 .top-title {
@@ -315,6 +321,7 @@ background-color: #404BBF
 
 .top-container {
 max-width: 1440px;
+margin: o auto;
  
 }
 
@@ -542,7 +549,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 overflow: hidden;
 }
 
-.portfolio-img:hover .overlay{
+.portfolio-set:hover .overlay{
     transform: translateY(0%);
 }
 
