--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,7 @@ a {
 }
 
 .page-footer {
-    display: flex;
+    
     background: #2e2f42;
     padding: 100px 0;
     flex-direction: row;
@@ -127,10 +127,8 @@ a {
 .top {
     
     padding: 188px 0;
-    background-image: linear-gradient(
-            rgba(46, 47, 66, 0.7),
-            rgba(46, 47, 66, 0.7)
-    ),
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
             url("../images/people-office.jpg");
     background-repeat: no-repeat;
     background-position: 50% 50%;
@@ -387,9 +385,6 @@ margin: o auto;
 }
 
 .page-footer .footer-container {
-    
-    justify-content: space-between;
-    margin-left: 100px;
 }
 
 .footer-logo {
@@ -585,3 +580,4 @@ overflow: hidden;
 .soc-icon {
     fill: #f4f4fd;
 }
+
