--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,12 @@ a {
     margin-right: 76px;
 }
 
+.page-header {
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+
+}
+
 .nav-link {
     font-weight: 500;
     font-size: 16px;
@@ -93,6 +99,24 @@ a {
     background-color: #404bbf;
 }
 
+.header-nav {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+
+.nav-list {
+    display: flex;
+    gap: 40px;
+}
+
+.nav-link:hover,
+.nav-link:focus,
+.contacts-link:hover,
+.contacts-link:focus {
+    color: #404bbf;
+}
+
 .contacts{
     font-style: normal;
     margin-left: auto;
@@ -108,11 +132,9 @@ a {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-link:hover,
-.nav-link:focus,
-.contacts-link:hover,
-.contacts-link:focus {
-    color: #404bbf;
+.contacts-list {
+    display: flex;
+    gap: 40px;
 }
 
 .page-footer {
@@ -125,7 +147,6 @@ a {
 }
 
 .top {
-    
     padding: 188px 0;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)),
@@ -135,6 +156,11 @@ a {
     background-size: cover;
     max-width: 1440px;
     margin: auto;
+}
+
+.top-container {
+    max-width: 1440px;
+    margin: o auto;
 }
 
 .top-title {
@@ -148,7 +174,6 @@ a {
     margin-bottom: 48px;
     margin-left: auto;
     margin-right: auto;
-
 }
 
 .top-button {
@@ -297,30 +322,10 @@ background-color: #404BBF
     display: flex;
     align-items: center;
     justify-content: flex-start;
-
-
 }
 
-.header-nav {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-}
-
-.nav-list {
-    display: flex;
-    gap: 40px;
-}
-
-.contacts-list {
-    display: flex;
-    gap: 40px;
-}
-
-.top-container {
-max-width: 1440px;
-margin: o auto;
- 
+.benefits {
+    padding: 120px 0;
 }
 
 .benefits-container {
@@ -334,6 +339,10 @@ margin: o auto;
 
 .benefits-list .benefits-tipe {
     width: calc((100% - 72px)/4);
+}
+
+.team {
+    padding: 120px 0;
 }
 
 .team-container {
@@ -354,6 +363,21 @@ margin: o auto;
     width: calc((100% - 72px)/4);
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.team-part {
+    padding: 32px 0;
+}
+
+.team-part .team-name {
+    text-align: center;
+    margin-bottom: 8px
+}
+
+.team-part .team-discription {
+    text-align: center;
+    margin-bottom: 8px;
+
 }
 
 .portfolio-container {
@@ -378,6 +402,19 @@ margin: o auto;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
+.portfolio-menu {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+
+}
+
+.portfolio-text {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
 
 .footer-container {
     display: flex;
@@ -405,64 +442,13 @@ margin: o auto;
     overflow: hidden;
 }
 
-.team-part {
-    padding: 32px 0;
-}
-
-.team-part .team-name {
-    text-align: center;
-    margin-bottom: 8px
-}
-
-.team-part .team-discription{
-    text-align: center;
-    margin-bottom: 8px;
-
-}
-
-.portfolio-menu {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 24px;
-    row-gap: 48px;
-  
-}
-
-.portfolio-text {
-    padding: 32px 16px;
-    border: 1px solid #e7e9fc;
-    border-top: none;
-}
-
-.page-header {
-    border-bottom: 1px solid #e7e9fc;
-    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
-    
-}
-
-
-.benefits {
-    padding: 120px 0;
-}
-
-.team{
-    padding: 120px 0;
-}
-
-.portfolio {
-    padding-bottom: 120px;
-    padding-top: 120px;
-}
-
 .social {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     gap: 24px;
-
 }
-
 
 .social-link {
     display: flex;
@@ -473,8 +459,6 @@ margin: o auto;
     background-color: #4D5AE5;
     border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        
-  
 }
 
 .social-link:hover,
@@ -486,7 +470,6 @@ margin: o auto;
 width: 40px;
 height: 40px;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .soc-icon {
@@ -505,8 +488,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
             margin-bottom: 8px;
 }
 
-
-
 .footer-sm {
     font-weight: 500;
         font-size: 16px;
@@ -519,8 +500,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .footer-social {
     display: flex;
     gap: 16px;
-
-
 }
 
 .overlay {
@@ -537,6 +516,11 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         width: 100%;
         transform: translateY(100%);
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio {
+    padding-bottom: 120px;
+    padding-top: 120px;
 }
 
 .portfolio-img {
@@ -558,12 +542,11 @@ overflow: hidden;
     background-color: #4d5ae5;
         border-radius: 50%;
         display: flex;
-        align-items: center;
-        justify-content: center;
+            align-items: center;
+            justify-content: center;
     width: 40px;
     height: 40px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .footer-social-link:hover,
@@ -581,3 +564,345 @@ overflow: hidden;
     fill: #f4f4fd;
 }
 
+.footer-subscribe {
+    margin-left: 80px;
+}
+
+.subscribe-lable {
+border-color: #4D5AE5;
+}
+
+.subscribe-form{
+    display: flex;
+    gap:24px
+}
+
+.subscribe-email {
+border: 1px solid #fff;
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background-color: #2E2F42;
+    padding-left: 16px;
+}
+
+.subscribe-email {
+    border: 1px solid #fff;
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background-color: #2E2F42;
+    padding-left: 16px;
+}
+
+.subscribe-email::placeholder {
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 2;
+        letter-spacing: 0.04em;
+        color: #fff;
+}
+
+
+.subscribe-lable:focus {
+    
+}
+
+.subscribe-button {
+    background: #4d5ae5;
+        cursor: pointer;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        color: #fff;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 16px;
+        width: 165px;
+        height: 40px;
+        border: none;
+        border-radius: 4px;
+            align-items: center;
+                justify-items: center;
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-button:focus {
+    background: #404BBF;
+}
+
+.icon-Frame{
+    fill: #fff;
+    
+}
+.modal-overlay {
+    background-color: rgba(46, 47, 66, 0.4);;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-overlay .is-open{
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    background-color: #fff;
+    width: 408px;
+    min-height: 584px;
+    padding: 61px 24px;
+    visibility: hiden;
+}
+
+.form {
+
+}
+
+.close {
+    position: absolute;
+    border-radius: 4px;
+    width: 24px;
+    height: 24px;
+    background-color: #E7E9FC;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    place-self: end;
+    margin-top: 28px;
+    margin-right: 24px;
+    margin-bottom: auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn {
+    position: absolute;
+    border: #E7E9FC;
+    top: 20px;
+    right: 24px;
+    border-radius: 50%;
+    background-color: #e7e9fc;;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: ;
+}
+
+
+.close-btn:hover,
+.close-btn:focus {
+    background-color: #404BBF
+}
+
+.form-close-icon {
+    fill: #2E2F42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+
+.close-btn:hover .form-close-icon,
+.close-btn:focus .form-close-icon {
+    fill: #FFFFFF
+}
+
+.form-name {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 16px;
+}
+
+.form {
+    
+}
+
+.form-label {
+    display: block;
+    margin-bottom: 4px;
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+   
+}
+
+.form-field {
+    margin-bottom: 8px;
+}
+
+.form-input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    padding: 11px 16px;
+    outline: transparent;
+    padding-left: 38px;
+}
+
+.form-wrapper {
+    position: relative;
+}
+
+
+.form-icon {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    pointer-events: none;
+    fill: #2E2F42
+    
+    
+}
+.form-input:focus {
+    border-color: #4D5AE5;
+}
+
+.form-input:focus + .form-icon {
+    fill: #4D5AE5;
+}
+
+.form-input::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: #2E2F42;
+}
+
+.form-comment {
+    width: 100%;
+    height: 120px;
+    padding: 8px 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    resize: none;
+    outline: transparent;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    ;
+    transition-property: border-color;
+    color: #2E2F42;
+}
+
+.form-comment::placeholder {
+    color: rgba(46, 47, 66, 0.4);
+}
+
+.form-comment:focus {
+    border-color: #4D5AE5;
+}
+
+.form-agreement-text {
+font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+
+.form-agreement {
+    margin-top: 20px;
+    margin-bottom: 24px;
+}
+
+.form-checkbox{
+    width: 20px;
+    height: 20px;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 8px;
+
+}
+
+.form-checkbox-icon {
+    fill: #F4F4FD;
+   opacity: 0;
+   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition-property: opacity;
+}
+
+input[type='checkbox']:checked
++ .form-agreement-text
+.form-checkbox {
+    background-color: #404BBF;
+    border-color: #404BBF;
+    
+}
+
+input[type='checkbox']:checked
++ .form-agreement-text 
+.form-checkbox 
+.form-checkbox-icon {
+    opacity: 1;
+}
+
+input[type='checkbox']:focus-visible 
++ .form-agreement-text 
+.form-checkbox {
+    outline: 2px solid #404BBF;
+    outline-offset: 2px;
+}
+
+.pp-href {
+    line-height: 1.33333;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
+}
+
+.form-button {
+    background: #4d5ae5;
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #fff;
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
+    padding: 16px 32px;
+    margin: auto;
+    align-items: center;
+    justify-items: center;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.form-button:hover,
+.form-button:focus {
+    background-color: #404BBF
+}
