--- a/css/styles.css
+++ b/css/styles.css
@@ -651,7 +651,7 @@ border: 1px solid #fff;
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-overlay .is-open{
+.modal-overlay {
     opacity: 1;
     pointer-events: auto;
 }
@@ -708,14 +708,14 @@ border: 1px solid #fff;
     border: 1px solid rgba(0, 0, 0, 0.1);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition-property: ;
+    transition-property: background-color, border;
     padding: 0;
 }
 
 
 .close-btn:hover {
-        background-color: #404BBF;
-        border: none;
+    background-color: #404BBF;
+    border: none;
     }
 
  .close-btn:focus {
@@ -764,7 +764,7 @@ border: 1px solid #fff;
 }
 
 .form-field {
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
 
 .form-input {
@@ -848,7 +848,7 @@ font-weight: 400;
 
 .form-agreement {
     margin-top: 20px;
-    margin-bottom: 16px;
+    margin-bottom: 24px;
 }
 
 .form-checkbox{
